# DOEGeneMPI

./: .gitignore  AUTHORS  Makefile  Makefile.in  README  README.md  aclocal.m4  configure.ac
src/: Makefile.am  Makefile.in  analysis.py  fftwmpi.cpp  fftwmpi.py  main.cpp  mpi-testing.cpp  work.cpp
